--- a/src/main/resources/templates/bungae_list.html
+++ b/src/main/resources/templates/bungae_list.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="/css/chatting.css">
     <link rel="stylesheet" th:href="@{/css/chatting_css.css}">
     <link rel="stylesheet" href="/css/bungae_list.css">
