카테고리로 모임 검색으로 수정

--- a/src/main/resources/templates/map.html
+++ b/src/main/resources/templates/map.html
@@ -22,11 +22,26 @@
         <div class="row">
             <div class="col-md-4" style="">
                 <form class="form-inline mx-auto my-2">
-                    <div class="input-group mx-auto">
-                        <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Search"
-                               style="width: 300px;">
-                        <div class="input-group-append">
-                            <button class="btn btn-primary" type="button"><i class="fa fa-search"></i></button>
+                    <div class="input-group border rounded border-light shadow-sm mx-auto">
+                        <div class="row w-100 no-gutters">
+                            <div class="col-4 text-left">
+                                <label class="w-100"><input type="checkbox" name="category" value="DRINK">술자리</label>
+                            </div>
+                            <div class="col-4 text-left">
+                                <label class="w-100"><input type="checkbox" name="category" value="SOCCER">축구</label>
+                            </div>
+                            <div class="col-4 text-left">
+                                <label class="w-100"><input type="checkbox" name="category" value="CYCLE">자전거</label>
+                            </div>
+                            <div class="col-4 text-left">
+                                <label class="w-100"><input type="checkbox" name="category" value="RUNNING">러닝</label>
+                            </div>
+                            <div class="col-4 text-left">
+                                <label class="w-100"><input type="checkbox" name="category" value="STUDY">공부</label>
+                            </div>
+                            <div class="col-4 text-left">
+                                <label class="w-100"><input type="checkbox" name="category" value="BASKETBALL">농구</label>
+                            </div>
                         </div>
                     </div>
                 </form>
