Feat: 기존 코드에 리뷰 기능 추가

--- a/src/main/resources/static/css/bungae_ing.css
+++ b/src/main/resources/static/css/bungae_ing.css
@@ -7145,3 +7145,9 @@ font-family: 'BMDOHYEON';
     width:25px;
     height:25px;
 }
+
+.ing_hr {
+  width: 50%;
+  margin: auto;
+  border: 1px solid #ddd;
+}
