--- a/src/main/resources/templates/bungae_ing.html
+++ b/src/main/resources/templates/bungae_ing.html
@@ -7,14 +7,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
           type="text/css">
     <link rel="stylesheet" href="/css/bungae_ing.css">
+    <link rel="stylesheet" href="/css/userReview.css">
+    <link rel="stylesheet" href="/css/review_list.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script th:src="@{/js/bungae_ing.js}" type="text/javascript"></script>
 </head>
 
 <body>
 <div th:replace="~{layout/header :: header}"></div>
 
-<div class="py-3">
+<div class="py-4">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
@@ -23,31 +24,174 @@
         </div>
     </div>
 </div>
-<div class="py-5">
+<div class="py-1">
     <div class="container">
         <div class="row d-flex justify-content-center">
-            <div class="col-md-8" style="">
-                <div class="list-group" style="">
-                    <a th:if="${bungae != null}" th:href="@{|/chat/${bungae.bungaeId}|}" class="list-group-item list-group-item-action flex-column align-items-start">
-                        <div class="row">
-                            <div class="col-md-4"><img class="d-block img-fluid"
-                                                       src="https://static.pingendo.com/img-placeholder-1.svg"></div>
-                            <div class="col-md-8" style="">
-                                <div class="d-flex w-100 justify-content-between">
-                                    <h5 class="my-2" th:text="${bungae.bungaeName}">번개명</h5>
+            <div class="col-md-8">
+                <div id="activeBungaeList" class="list-group mb-4">
+                    <div th:if="${bungaeList == null or #lists.isEmpty(bungaeList) or bungaeList.?[bungaeStatus != T(com.multi.bungae.domain.BungaeStatus).ENDED].size() == 0}">
+                        <p class="text-center"> 🙅 참여중인 번개가 없어요</p>
+                    </div>
+                    <div th:each="bungae : ${bungaeList}">
+                        <a th:if="${bungae.bungaeStatus != T(com.multi.bungae.domain.BungaeStatus).ENDED}" th:href="@{|/chat/${bungae.bungaeId}|}" class="mb-4 list-group-item list-group-item-action flex-column align-items-start">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <img class="d-block img-fluid" src="https://static.pingendo.com/img-placeholder-1.svg">
                                 </div>
-                                <p class="text-left" th:text="${bungae.bungaeStartTime}">일시</p>
-                                <p class="text-left" th:text="${bungae.bungaeLocation.keyword}">장소</p>
-                                <p class="text-left" th:text="${bungae.bungaeLocation.address}">상세장소</p>
-                                <p class="text-left" th:text="${bungae.bungaeMaxMember}">인원</p>
+                                <div class="col-md-8">
+                                    <div class="d-flex w-100 justify-content-between">
+                                        <h5 class="my-2" th:text="${bungae.bungaeName}">번개명</h5>
+                                    </div>
+                                    <p class="text-left" th:text="${bungae.bungaeStartTime}">일시</p>
+                                    <p class="text-left" th:text="${bungae.bungaeLocation.keyword}">장소</p>
+                                    <p class="text-left" th:text="${bungae.bungaeLocation.address}">상세장소</p>
+                                    <p class="text-left" th:text="'인원: ' + ${bungaeMemberCounts[bungae.bungaeId]} + ' / ' + ${bungae.bungaeMaxMember}">인원</p>
+                                </div>
                             </div>
-                        </div>
-                    </a>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
+<hr class="ing_hr" style="color:gray">
+<div class="py-4">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <h1 class="text-center mb-3">종료된 번개</h1>
+                <p class="text-center mb-3">번개 모임이 종료되면 후기를 남겨보세요 ✏️</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="py-1">
+    <div class="container">
+        <div class="row d-flex justify-content-center">
+            <div class="col-md-8">
+                <div id="endedBungaeList" class="list-group">
+                    <div th:if="${bungaeList == null or #lists.isEmpty(bungaeList) or bungaeList.?[bungaeStatus == T(com.multi.bungae.domain.BungaeStatus).ENDED].size() == 0}">
+                        <p class="text-center"> 🙅 종료된 번개가 없어요</p>
+                    </div>
+                    <div class = "pb-4 " th:each="bungae : ${bungaeList}">
+                        <a th:if="${bungae.bungaeStatus == T(com.multi.bungae.domain.BungaeStatus).ENDED}" class="list-group-item list-group-item-action flex-column align-items-start">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <img class="d-block img-fluid" src="https://static.pingendo.com/img-placeholder-1.svg">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="d-flex w-100 justify-content-between">
+                                        <h5 class="my-2" th:text="${bungae.bungaeName}">번개명</h5>
+                                    </div>
+                                    <p class="text-left" th:text="${bungae.bungaeStartTime}">일시</p>
+                                    <p class="text-left" th:text="${bungae.bungaeLocation.keyword}">장소</p>
+                                    <p class="text-left" th:text="${bungae.bungaeLocation.address}">상세장소</p>
+                                    <p class="text-left" th:text="'인원: ' + ${bungaeMemberCounts[bungae.bungaeId]} + ' / ' + ${bungae.bungaeMaxMember}">인원</p>
+                                </div>
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="col-md-12 text-center mt-3">
+                                            <button type="button" th:attr="data-bungae-id=${bungae.bungaeId}" class="btn btn-primary mx-5 go_review">후기 남기기</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- 멤버 리스트 모달 추가 (예시) -->
+<div class="modal" id="reviewModal" tabindex="-1" role="dialog" style="overflow-y: scroll;">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">리뷰 작성</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <!-- 사용자 정보를 동적으로 추가할 컨테이너 -->
+                <div id="usersContainer"></div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<!-- 후기 모달 추가 (예시) -->
+<div class="modal" id="reviewModal2" tabindex="-1" role="dialog" style="overflow-y: scroll;">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 id="mnickname2" class="modal-title">닉네임</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="form-group">
+                    <div class="wrap">
+                        <div class="rating">
+                            <label class="rating__label rating__label--half" for="starhalf">
+                                <input type="radio" id="starhalf" class="rating__input" name="rating" value="0.5">
+                                <span class="star-icon"></span>
+                            </label>
+                            <label class="rating__label rating__label--full" for="star1">
+                                <input type="radio" id="star1" class="rating__input" name="rating" value="1.0">
+                                <span class="star-icon"></span>
+                            </label>
+                            <label class="rating__label rating__label--half" for="star1half">
+                                <input type="radio" id="star1half" class="rating__input" name="rating" value="1.5">
+                                <span class="star-icon"></span>
+                            </label>
+                            <label class="rating__label rating__label--full" for="star2">
+                                <input type="radio" id="star2" class="rating__input" name="rating" value="2.0">
+                                <span class="star-icon"></span>
+                            </label>
+                            <label class="rating__label rating__label--half" for="star2half">
+                                <input type="radio" id="star2half" class="rating__input" name="rating" value="2.5">
+                                <span class="star-icon"></span>
+                            </label>
+                            <label class="rating__label rating__label--full" for="star3">
+                                <input type="radio" id="star3" class="rating__input" name="rating" value="3.0">
+                                <span class="star-icon"></span>
+                            </label>
+                            <label class="rating__label rating__label--half" for="star3half">
+                                <input type="radio" id="star3half" class="rating__input" name="rating" value="3.5" checked>
+                                <span class="star-icon"></span>
+                            </label>
+                            <label class="rating__label rating__label--full" for="star4">
+                                <input type="radio" id="star4" class="rating__input" name="rating" value="4.0">
+                                <span class="star-icon"></span>
+                            </label>
+                            <label class="rating__label rating__label--half" for="star4half">
+                                <input type="radio" id="star4half" class="rating__input" name="rating" value="4.5">
+                                <span class="star-icon"></span>
+                            </label>
+                            <label class="rating__label rating__label--full" for="star5">
+                                <input type="radio" id="star5" class="rating__input" name="rating" value="5.0">
+                                <span class="star-icon"></span>
+                            </label>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <input type="text" class="form-control" id="reviewText" name="text" >
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary reviewSaveBtn" id="submitReview">리뷰 등록</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
         integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
@@ -55,6 +199,9 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+<script th:src="@{/js/member_review.js}" type="text/javascript"></script>
+<script th:src="@{/js/star.js}" type="text/javascript"></script>
+
 <div th:replace="~{layout/footer :: footer}"></div>
 
 </body>
