시간출력수정

--- a/src/main/resources/static/css/bungae_ing.css
+++ b/src/main/resources/static/css/bungae_ing.css
@@ -7134,7 +7134,7 @@ a.text-dark:hover, a.text-dark:focus {
 * {
 	font-family: 'BMDOHYEON';
 }
-h1, h2, h3{
+h1, h2, h3, h5{
 font-family: 'BMDOHYEON';
 }
 .github_icon{
