--- a/src/main/resources/static/css/chatting_css.css
+++ b/src/main/resources/static/css/chatting_css.css
@@ -136,3 +136,19 @@
     color: black;
     text-decoration: none;
 }
+
+.user-info {
+    display: flex;
+    align-items: center;
+}
+
+.user-image {
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    margin-right: 10px; /* 이미지와 텍스트 사이의 간격 조정 */
+}
+
+.user-nickname {
+    margin: 0; /* 기본적인 마진 제거 */
+}
