Feat: 검색 기능 추가
메인에서 검색하면 목록으로 이동해서 결과 출력

--- a/src/main/resources/templates/bungae_list.html
+++ b/src/main/resources/templates/bungae_list.html
@@ -21,12 +21,14 @@
         <div class="row">
             <div class="col-md-12">
                 <h1 class="text-center mb-3">번개 목록</h1>
-                <form class="form-inline d-flex justify-content-center">
+                <form class="form-inline d-flex justify-content-center" id="search-form">
                     <div class="input-group">
                         <input type="text" class="form-control form-control-lg" id="inlineFormInputGroup"
                                placeholder="Search" style="	width: 600px;">
                         <div class="input-group-append">
-                            <button class="btn btn-primary" type="button"><i class="fa fa-search"></i></button>
+                            <button class="btn btn-primary" type="button" id="search-button"><i
+                                    class="fa fa-search"></i>
+                            </button>
                         </div>
                     </div>
                 </form>
