--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -31,12 +31,12 @@
                 </div>
                 <div class="row">
                     <div class="col-md-12">
-                        <form class="form-inline text-center mt-3">
+                        <form class="form-inline text-center mt-3" id="search-form">
                             <div class="input-group d-flex mx-auto">
                                 <input type="text" class="form-control" id="inlineFormInputGroup"
                                        style="	width: 500px;	height: 60px;" placeholder="키워드를 입력하세요.">
                                 <div class="input-group-append text-center">
-                                    <button class="btn btn-primary text-center" type="button"><i
+                                    <button class="btn btn-primary text-center" id="search-button" type="button"><i
                                             class="fa fa-search"></i></button>
                                 </div>
                             </div>
