--- a/src/main/resources/static/css/map.css
+++ b/src/main/resources/static/css/map.css
@@ -7164,3 +7164,15 @@ font-family: 'BMDOHYEON';
     width:25px;
     height:25px;
 }
+.customoverlay {
+      position: absolute;
+      bottom: 75px;
+      left: 50%;
+      transform: translateX(-65%);
+      background-color: white;
+      border: 2px solid #ccc;
+      border-radius: 10px;
+      padding: 7px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      white-space: nowrap;
+    }
