--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -61,7 +61,7 @@
                 </div>
             </div>
             <div class="col-md-6">
-                <h2 class=""><i class="fa fa-fw fa-clock-o"></i>마감 임박 번개</h2>
+                <h2 class=""><i class="fa fa-fw fa-times" ></i>마감 임박 번개</h2>
                 <div class="row">
                     <div class="col-md-12">
                         <div class="list-group" id="deadline-list">
