--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -27,7 +27,7 @@
       <p id="Age-Gender">나이/성별</p>
       <p id="userReviewScore">평점란</p>
     </div>
-    <div class="input-group text-center">
+    <div class="text-center">
       <p id="userInfo" class="text-center align-items-center">자기소개란</p>
     </div>
     <button th:onclick="|location.href='@{profile_edit}'|" class="btn btn-primary mx-3" type="button">프로필 수정</button><br>
